--- v0.3 development series ---

- Be compatible to some degree with options mail.correct_threading and
mail.strict_threading (the "open in new tab" feature won't work though).
- Add an option to display message snippets using a monospaced font.
- Fix issues with the options dialog size on Mac.
- Display proper icons in the "Customize palette" dialogs.
- There is now an indication for messages that are drafts.

GMail Conversation View 0.3beta1
---------------------------------
- Fix packaging bug. All development builds between 03/01 and 03/07 won't work.
- Fix the visual appearance of the button in the mail header toolbar.
- Fix a bug where error messages would remain stuck on the screen.
- Added an option (disabled by default) to mark the whole thread as read when
the conversation view is loaded.
- The extension now uses a jar file for better performance.
- Revamped options dialog (much better).
- The extension's icon is now visible in Thunderbird 3.0.x (only in 3.1 before)

GMail Conversation View 0.3alpha3
---------------------------------
- Make the extension still work when the "Global search and indexer" is
disabled. You won't get all the features but it should improve your experience
anyway.
- Added more meaningful error messages.
- Warn people when "Global search and indexer" is disabled (this prevents the
extension from working).

GMail Conversation View 0.3alpha2
---------------------------------
- Conversations are now automatically pulled by default (this can be disabled in
the options dialog). This means that if you reply to someone's message, although
there is no thread in your inbox, the conversation view will appear whenever you
select that message. This adds some extra stress on Thunderbird so this can be
disabled in the add-on's options.
- Added links to reply (and other actions) to an email in the conversation
directly (it's not necessary to open the message first anymore). You can hold
shift while clicking the links, it will work as expected.