@@ -1,5 +1,6 @@
 --- v0.3 development series ---
 
+- Fix the Makefile to be compatible with older versions of zip.
 - Be compatible to some degree with options mail.correct_threading and
 mail.strict_threading (the "open in new tab" feature won't work though).
 - Add an option to display message snippets using a monospaced font.
